[package]
name = "rsteglib"
version = "0.1.0"
authors = ["Hugh Gallagher <hgallagher1993@gmail.com>"]
description = "Rust Steganography Library"
license = "MIT"
repository = "https://github.com/hgallagher1993/rsteglib"
homepage = "https://github.com/hgallagher1993/rsteglib"
readme = "README.md"

[dependencies]
