[package]
name = "rsteglib_cli"
version = "0.1.0"
authors = ["hgallagher1993 <hgallagher1993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.4"

[dependencies.rsteglib]
path = "../rsteglib"